examples/test/testpolicy17209.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17209
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key23: value32
      key44: value47
      key28: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value30
          key25: value15
      podSelector:
        matchLabels:
          key36: value11
